[project]
name = "kanbanz"
version = "0.2.2"
description = "相对完整版, 支持基本功能及其相关文档和测试"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "grapherz>=0.1.7", "llmada>=0.1.11", "mkdocs-material>=9.6.11", "mkdocstrings>=0.29.1", "mkdocstrings-python>=1.16.10", "promptlibz>=0.2.7", "pytest>=8.3.5", "pytest-html>=4.1.1", "requests>=2.32.3", "setuptools>=78.1.0",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
